--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.10.0"
+    "parcel": "^2.10.0",
+    "parcel-transformer-hbs": "^1.0.4"
   },
   "dependencies": {
     "cssnano": "^4.1.11",
-    "parcel-bundler": "^1.12.5"
+    "handlebars": "^4.7.8",
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-handlebars": "^0.4.4"
   }
 }
